added featured campaigns

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -33,9 +33,7 @@
         Join thousands of creators who have successfully funded their projects
         through our platform
       </p>
-      <a href="#" class="btn btn-primary" onclick="showCampaigns()"
-        >Explore Campaigns</a
-      >
+      <a href="#" class="btn btn-primary" id="explore">Explore Campaigns</a>
     </section>
 
     <!-- about us -->
@@ -83,5 +81,6 @@
         </div>
       </div>
     </section>
+    <script src="../index.js"></script>
   </body>
 </html>
