--- a/HTML/index.html
+++ b/HTML/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" style="scroll-behavior: smooth">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -33,7 +33,9 @@
         Join thousands of creators who have successfully funded their projects
         through our platform
       </p>
-      <a href="#" class="btn btn-primary" id="explore">Explore Campaigns</a>
+      <a href="#campaign-cards" class="btn btn-primary" id="explore"
+        >Explore Campaigns</a
+      >
     </section>
 
     <!-- about us -->
@@ -79,6 +81,7 @@
         <div class="cards" id="campaign-cards">
           <!--                         -->
         </div>
+        <button id="loadMoreBtn">Load More</button>
       </div>
     </section>
     <script src="../index.js"></script>
