--- a/HTML/login.html
+++ b/HTML/login.html
@@ -7,6 +7,18 @@
     <link rel="stylesheet" href="../Sass/main.css" />
   </head>
   <body>
+    <header>
+      <div class="logo">FundMeShokran</div>
+
+      <div class="nav">
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="#">Campaigns</a></li>
+          <li><a href="#">About Us</a></li>
+        </ul>
+      </div>
+    </header>
+
     <section class="login">
       <div class="content">
         <h2>Welcome To FundMeShokran</h2>
