--- a/HTML/signup.html
+++ b/HTML/signup.html
@@ -7,10 +7,21 @@
     <link rel="stylesheet" href="../Sass/main.css" />
   </head>
   <body>
+    <header>
+      <div class="logo">FundMeShokran</div>
+
+      <div class="nav">
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="#">Campaigns</a></li>
+          <li><a href="#">About Us</a></li>
+        </ul>
+      </div>
+    </header>
     <section class="signup">
       <div class="content">
         <h2>Welcome To FundMeShokran</h2>
-        <h3>Join Us</h3>
+        <h3><span id="join-us">Join Us</span></h3>
         <form id="signup-form">
           <div class="form-group">
             <label for="fname">Full Name</label>
