--- a/HTML/index.html
+++ b/HTML/index.html
@@ -18,7 +18,7 @@
             </div>
           </li>
           <li><a href="index.html">Home</a></li>
-          <li><a href="../HTML/campaings.html">Campaigns</a></li>
+          <li><a href="../HTML/campaigns.html">Campaigns</a></li>
           <li><a href="#">About Us</a></li>
           <li></li>
           <li>
