--- a/HTML/start-campaign.html
+++ b/HTML/start-campaign.html
@@ -37,13 +37,13 @@
         />
         <br /><br />
 
-        <label for="goal">Goal Amount (USD):</label>
+        <label for="goal">Goal Amount:</label>
         <input
           type="number"
           id="goal"
           name="goal"
           placeholder="Enter the goal amount"
-          min="1"
+          min="3"
           required
         />
         <br /><br />
@@ -51,7 +51,6 @@
         <label for="deadline">Deadline:</label>
         <input type="date" id="deadline" name="deadline" required />
         <br /><br />
-
         <label for="description">Campaign Description:</label><br />
         <textarea
           id="description"
@@ -61,6 +60,15 @@
           cols="40"
           required
         ></textarea>
+        <br /><br />
+        <label for="image">Campaign Image:</label>
+        <input
+          type="file"
+          id="image"
+          name="image"
+          placeholder="Enter image URL"
+          required
+        />
         <br /><br />
 
         <button type="submit" class="btn-primary-dark">Create Campaign</button>
