LTS-Before edit campaign

--- a/HTML/campaign.html
+++ b/HTML/campaign.html
@@ -15,7 +15,7 @@
           <input
             value=""
             id="amount"
-            type="text"
+            type="number"
             placeholder="Enter donation amount"
             required
           />
