--- a/HTML/index.html
+++ b/HTML/index.html
@@ -12,25 +12,22 @@
 
       <div class="nav">
         <ul>
-          <li>
-            <div class="search">
-              <input type="search" placeholder="Search Campagins" />
-            </div>
-          </li>
           <li><a href="index.html">Home</a></li>
           <li><a href="../HTML/campaigns.html">Campaigns</a></li>
           <li><a href="#">About Us</a></li>
-          <li></li>
           <li>
-            <a href="./login.html" id="loginBtn">Login</a>
-          </li>
-          <li>
-            <a href="./login.html" id="logoutBtn" style="display: none"
-              >Logout</a
-            >
+            <a href="#" style="display: none" id="myCamp"> My Campaigns</a>
           </li>
         </ul>
       </div>
+      <span>
+        <a href="./login.html" id="loginBtn">Login</a>
+      </span>
+      <span
+        ><a href="./login.html" id="logoutBtn" style="display: none"
+          >Logout</a
+        ></span
+      >
     </header>
 
     <!-- hero section -->
