--- a/HTML/campaigns.html
+++ b/HTML/campaigns.html
@@ -14,15 +14,16 @@
         <ul>
           <li>
             <div class="search">
-              <input type="search" placeholder="Search Campagins" />
+              <input
+                type="search"
+                placeholder="Search Campagins"
+                id="searchInput"
+              />
             </div>
           </li>
           <li><a href="index.html">Home</a></li>
-          <li><a href="#">Campaigns</a></li>
+          <li><a href="../HTML/campaigns.html">Campaigns</a></li>
           <li><a href="#">About Us</a></li>
-          <li>
-            <a href="#" style="display: none" id="myCamp"> My Campaigns</a>
-          </li>
         </ul>
       </div>
       <span
@@ -30,12 +31,14 @@
           >Logout</a
         ></span
       >
-      <a href="./login.html" id="loginBtn">Login</a>
-      <span></span>
+      <span>
+        <a href="./login.html" id="loginBtn">Login</a>
+      </span>
     </header>
     <section class="campaigns">
       <div class="content">
-        <h2>Campaigns</h2>
+        <a class="camps">Campaigns</a>
+        <a class="myCamps" style="display: none">My Campaigns</a>
         <div class="cards" id="campaign-cards">
           <!--                         -->
         </div>
