--- a/HTML/start-campaign.html
+++ b/HTML/start-campaign.html
@@ -13,7 +13,7 @@
       <div class="nav">
         <ul>
           <li><a href="index.html">Home</a></li>
-          <li><a href="#">Campaigns</a></li>
+          <li><a href="../HTML/campaigns.html">Campaigns</a></li>
           <li><a href="#">About Us</a></li>
           <li>
             <a href="./login.html" id="logoutBtn" style="display: none"
