added(Search,Section,Footer)&UI-tweaks_Alpha

--- a/HTML/campaigns.html
+++ b/HTML/campaigns.html
@@ -37,8 +37,8 @@
     </header>
     <section class="campaigns">
       <div class="content">
-        <a class="camps">Campaigns</a>
-        <a class="myCamps" style="display: none">My Campaigns</a>
+        <a class="camps">All Campaigns</a>
+        <a class="myCamps" style="display: none">Your Campaigns</a>
         <div class="cards" id="campaign-cards">
           <!--                         -->
         </div>
