--- a/HTML/dashboard.html
+++ b/HTML/dashboard.html
@@ -24,6 +24,7 @@
             <li class="active">Dashboard</li>
             <li>Campaigns</li>
             <li>Users</li>
+            <li>Pledges</li>
           </ul>
         </nav>
         <div>
