--- a/HTML/index.html
+++ b/HTML/index.html
@@ -14,10 +14,7 @@
         <ul>
           <li><a href="index.html">Home</a></li>
           <li><a href="../HTML/campaigns.html">Campaigns</a></li>
-          <li><a href="#">About Us</a></li>
-          <li>
-            <a href="#" style="display: none" id="myCamp"> My Campaigns</a>
-          </li>
+          <li><a href="#aboutUs">About Us</a></li>
         </ul>
       </div>
       <span>
@@ -46,7 +43,7 @@
     </section>
 
     <!-- about us -->
-    <section class="about-us">
+    <section class="about-us" id="aboutUs">
       <div class="content">
         <h2>About Us</h2>
         <div class="cards">
@@ -90,6 +87,58 @@
         >
       </div>
     </section>
+
+    <!--Why us -->
+    <section class="why-choose-us">
+      <div class="content">
+        <h2>Why Choose FundMeShokran?</h2>
+        <div class="reasons">
+          <div class="reason">
+            <h3>Easy Fundraising</h3>
+            <p>
+              Launch your campaign in minutes and reach a global audience of
+              supporters.
+            </p>
+          </div>
+          <div class="reason">
+            <h3>Secure Donations</h3>
+            <p>
+              Our platform ensures safe and transparent transactions for both
+              creators and donors.
+            </p>
+          </div>
+          <div class="reason">
+            <h3>Community Support</h3>
+            <p>
+              Join a vibrant community that celebrates creativity and
+              innovation.
+            </p>
+          </div>
+          <div class="reason">
+            <h3>Success Stories</h3>
+            <p>
+              Thousands of projects funded, from small ideas to big dreams come
+              true.
+            </p>
+          </div>
+        </div>
+        <a href="../HTML/login.html" class="btn-primary-dark" id="start"
+          >Start Your Campaign Today</a
+        >
+      </div>
+    </section>
+
+    <!-- Footer -->
+    <footer class="footer">
+      <div class="content">
+        <p>&copy; 2025 FundMeShokran. All rights reserved.</p>
+        <div class="links">
+          <a href="#">Privacy Policy</a>
+          <a href="#">Terms of Service</a>
+          <a href="#">Contact Us</a>
+        </div>
+      </div>
+    </footer>
     <script src="../scripts/index.js"></script>
   </body>
 </html>
