before changing the html path

--- a/HTML/EditCamp.html
+++ b/HTML/EditCamp.html
@@ -16,7 +16,12 @@
           <li><a href="../HTML/campaigns.html">Campaigns</a></li>
           <li><a href="#">About Us</a></li>
           <li>
-            <a href="#" style="display: none" id="myCamp"> My Campaigns</a>
+            <a
+              href="../HTML/dashboard.html"
+              style="display: none"
+              id="dashboard"
+              >Dashboard</a
+            >
           </li>
         </ul>
       </div>
@@ -84,6 +89,7 @@
         </form>
       </div>
     </section>
-    <script src="../scripts/editCamp.js"></script>
+    <script type="module" src="../scripts/adminAuth.js"></script>
+    <script type="module" src="../scripts/editCamp.js"></script>
   </body>
 </html>
