--- a/HTML/dashboard.html
+++ b/HTML/dashboard.html
@@ -17,6 +17,7 @@
               color: #0f8488;
               font-size: larger;
             "
+            id="logo"
           >
             FundMeShokran
           </div>
