--- a/HTML/index.html
+++ b/HTML/index.html
@@ -14,7 +14,15 @@
         <ul>
           <li><a href="index.html">Home</a></li>
           <li><a href="../HTML/campaigns.html">Campaigns</a></li>
-          <li><a href="#aboutUs">About Us</a></li>
+          <li><a href="#">About Us</a></li>
+          <li>
+            <a
+              href="../HTML/dashboard.html"
+              style="display: none"
+              id="dashboard"
+              >Dashboard</a
+            >
+          </li>
         </ul>
       </div>
       <span>
@@ -139,6 +147,7 @@
         </div>
       </div>
     </footer>
-    <script src="../scripts/index.js"></script>
+    <script type="module" src="../scripts/adminAuth.js"></script>
+    <script type="module" src="../scripts/index.js"></script>
   </body>
 </html>
