--- a/HTML/start-campaign.html
+++ b/HTML/start-campaign.html
@@ -16,6 +16,14 @@
           <li><a href="../HTML/campaigns.html">Campaigns</a></li>
           <li><a href="#">About Us</a></li>
           <li>
+            <a
+              href="../HTML/dashboard.html"
+              style="display: none"
+              id="dashboard"
+              >Dashboard</a
+            >
+          </li>
+          <li>
             <a href="./login.html" id="logoutBtn" style="display: none"
               >Logout</a
             >
@@ -74,6 +82,7 @@
         <button type="submit" class="btn-primary-dark">Create Campaign</button>
       </form>
     </div>
-    <script src="../scripts/start-campaign.js"></script>
+    <script type="module" src="../scripts/adminAuth.js"></script>
+    <script type="module" src="../scripts/start-campaign.js"></script>
   </body>
 </html>
