--- a/HTML/dashboard.html
+++ b/HTML/dashboard.html
@@ -20,7 +20,7 @@
             "
             id="logo"
           >
-            FundMeShokran
+            FundClub
           </div>
           <ul>
             <li class="active">Dashboard</li>
