--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>FundMeShokran</title>
+    <title>FundClub</title>
     <link rel="stylesheet" href="/Sass/main.css" />
   </head>
   <body>
     <header>
-      <div class="logo">FundMeShokran</div>
+      <div class="logo">FundClub</div>
 
       <div class="nav">
         <ul>
@@ -96,7 +96,7 @@
     <!--Why us -->
     <section class="why-choose-us">
       <div class="content">
-        <h2>Why Choose FundMeShokran?</h2>
+        <h2>Why Choose FundClub?</h2>
         <div class="reasons">
           <div class="reason">
             <h3>Easy Fundraising</h3>
@@ -136,7 +136,7 @@
     <!-- Footer -->
     <footer class="footer">
       <div class="content">
-        <p>&copy; 2025 FundMeShokran. All rights reserved.</p>
+        <p>&copy; 2025 FundClub. All rights reserved.</p>
         <div class="links">
           <a href="#">Privacy Policy</a>
           <a href="#">Terms of Service</a>
