--- a/HTML/campaigns.html
+++ b/HTML/campaigns.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header>
-      <div class="logo">FundMeShokran</div>
+      <div class="logo">FundClub</div>
 
       <div class="nav">
         <ul>
