--- a/HTML/login.html
+++ b/HTML/login.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>LogIn to FundMeShokran</title>
+    <title>LogIn to FundClub</title>
     <link rel="stylesheet" href="../Sass/main.css" />
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   </head>
   <body>
     <header>
-      <div class="logo">FundMeShokran</div>
+      <div class="logo">FundClub</div>
 
       <div class="nav">
         <ul>
@@ -22,7 +22,7 @@
 
     <section class="login">
       <div class="content">
-        <h2>Welcome To FundMeShokran</h2>
+        <h2>Welcome To FundClub</h2>
         <h3>Log In</h3>
         <form id="login-form">
           <div class="form-group">
