--- a/HTML/signup.html
+++ b/HTML/signup.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <header>
-      <div class="logo">FundMeShokran</div>
+      <div class="logo">FundClub</div>
 
       <div class="nav">
         <ul>
@@ -21,7 +21,7 @@
     </header>
     <section class="signup">
       <div class="content">
-        <h2>Welcome To FundMeShokran</h2>
+        <h2>Welcome To FundClub</h2>
         <h3><span id="join-us">Join Us</span></h3>
         <form id="signup-form">
           <div class="form-group">
