--- a/HTML/start-campaign.html
+++ b/HTML/start-campaign.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <header>
-      <div class="logo">FundMeShokran</div>
+      <div class="logo">FundClub</div>
 
       <div class="nav">
         <ul>
